src/dAngr/cli/grammar/.antlr/dAngrParser.java
// Generated from /workspaces/dAngr/src/dAngr/cli/grammar/dAngr.g4 by ANTLR 4.13.1

import re as rex

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class dAngrParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		STATIC=1, CIF=2, CTHEN=3, CELSE=4, RANGE=5, DEF=6, IF=7, ELSE=8, FOR=9, 
		IN=10, WHILE=11, BOOL=12, HELP=13, RETURN=14, BREAK=15, CONTINUE=16, NEWLINE=17, 
		WS=18, HEX_NUMBERS=19, NUMBERS=20, NUMBER=21, LETTERS=22, LETTER=23, SYM_DB=24, 
		REG_DB=25, VARS_DB=26, MEM_DB=27, STATE=28, STRING=29, BINARY_STRING=30, 
		ESCAPED_QUOTE=31, ESCAPED_SINGLE_QUOTE=32, SESC_SEQ=33, ESC_SEQ=34, ARROW=35, 
		LPAREN=36, RPAREN=37, BANG=38, AMP=39, DOLLAR=40, COLON=41, SCOLON=42, 
		COMMA=43, QUOTE=44, SQUOTE=45, AT=46, DOT=47, BAR=48, BRA=49, KET=50, 
		BRACE=51, KETCE=52, HAT=53, HASH=54, PERC=55, MUL=56, ADD=57, DIV=58, 
		FLOORDIV=59, LSHIFT=60, RSHIFT=61, POW=62, ASSIGN=63, EQ=64, NEQ=65, LT=66, 
		GT=67, LE=68, GE=69, AND=70, OR=71, QMARK=72, TILDE=73, TICK=74, UNDERSCORE=75, 
		DASH=76, INDENT=77, DEDENT=78;
	public static final int
		RULE_script = 0, RULE_statement = 1, RULE_expression = 2, RULE_expression_part = 3, 
		RULE_assignment = 4, RULE_static_var = 5, RULE_ext_command = 6, RULE_control_flow = 7, 
		RULE_else_ = 8, RULE_function_def = 9, RULE_body = 10, RULE_fstatement = 11, 
		RULE_iterable = 12, RULE_parameters = 13, RULE_condition = 14, RULE_operation = 15, 
		RULE_py_basic_content = 16, RULE_py_content = 17, RULE_bash_content = 18, 
		RULE_reference = 19, RULE_index = 20, RULE_identifier = 21, RULE_numeric = 22, 
		RULE_object = 23, RULE_anything = 24, RULE_special_words = 25, RULE_range = 26, 
		RULE_dangr_range = 27, RULE_bash_range = 28, RULE_python_range = 29, RULE_symbol = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"script", "statement", "expression", "expression_part", "assignment", 
			"static_var", "ext_command", "control_flow", "else_", "function_def", 
			"body", "fstatement", "iterable", "parameters", "condition", "operation", 
			"py_basic_content", "py_content", "bash_content", "reference", "index", 
			"identifier", "numeric", "object", "anything", "special_words", "range", 
			"dangr_range", "bash_range", "python_range", "symbol"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'static'", "'IIF'", "'THEN'", "'ELSE'", "'range'", "'def'", "'if'", 
			"'else'", "'for'", "'in'", "'while'", null, "'help'", "'return'", "'break'", 
			"'continue'", null, null, null, null, null, null, null, "'&sym'", "'&reg'", 
			"'&vars'", "'&mem'", "'&state'", null, null, null, null, null, null, 
			"'->'", "'('", "')'", "'!'", "'&'", "'$'", "':'", "';'", "','", "'\"'", 
			"'''", "'@'", "'.'", "'|'", "'['", "']'", "'{'", "'}'", "'^'", "'#'", 
			"'%'", "'*'", "'+'", "'/'", "'//'", "'<<'", "'>>'", "'**'", "'='", "'=='", 
			"'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", "'||'", "'?'", "'~'", "'`'", 
			"'_'", "'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "STATIC", "CIF", "CTHEN", "CELSE", "RANGE", "DEF", "IF", "ELSE", 
			"FOR", "IN", "WHILE", "BOOL", "HELP", "RETURN", "BREAK", "CONTINUE", 
			"NEWLINE", "WS", "HEX_NUMBERS", "NUMBERS", "NUMBER", "LETTERS", "LETTER", 
			"SYM_DB", "REG_DB", "VARS_DB", "MEM_DB", "STATE", "STRING", "BINARY_STRING", 
			"ESCAPED_QUOTE", "ESCAPED_SINGLE_QUOTE", "SESC_SEQ", "ESC_SEQ", "ARROW", 
			"LPAREN", "RPAREN", "BANG", "AMP", "DOLLAR", "COLON", "SCOLON", "COMMA", 
			"QUOTE", "SQUOTE", "AT", "DOT", "BAR", "BRA", "KET", "BRACE", "KETCE", 
			"HAT", "HASH", "PERC", "MUL", "ADD", "DIV", "FLOORDIV", "LSHIFT", "RSHIFT", 
			"POW", "ASSIGN", "EQ", "NEQ", "LT", "GT", "LE", "GE", "AND", "OR", "QMARK", 
			"TILDE", "TICK", "UNDERSCORE", "DASH", "INDENT", "DEDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "dAngr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public dAngrParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(dAngrParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(dAngrParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(dAngrParser.NEWLINE, i);
		}
		public TerminalNode QMARK() { return getToken(dAngrParser.QMARK, 0); }
		public TerminalNode HELP() { return getToken(dAngrParser.HELP, 0); }
		public TerminalNode WS() { return getToken(dAngrParser.WS, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<Function_defContext> function_def() {
			return getRuleContexts(Function_defContext.class);
		}
		public Function_defContext function_def(int i) {
			return getRuleContext(Function_defContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).exitScript(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(62);
				_la = _input.LA(1);
				if ( !(_la==HELP || _la==QMARK) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(63);
					match(WS);
					setState(64);
					identifier();
					}
				}

				setState(67);
				match(NEWLINE);
				}
				break;
			case 2:
				{
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2816744768667646L) != 0) || _la==UNDERSCORE || _la==DASH) {
					{
					setState(71);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						setState(68);
						match(NEWLINE);
						}
						break;
					case 2:
						{
						setState(69);
						statement();
						}
						break;
					case 3:
						{
						setState(70);
						function_def();
						}
						break;
					}
					}
					setState(75);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(78);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Control_flowContext control_flow() {
			return getRuleContext(Control_flowContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(dAngrParser.NEWLINE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Static_varContext static_var() {
			return getRuleContext(Static_varContext.class,0);
		}
		public Ext_commandContext ext_command() {
			return getRuleContext(Ext_commandContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				control_flow();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				assignment();
				setState(82);
				match(NEWLINE);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				expression();
				setState(85);
				match(NEWLINE);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(87);
				static_var();
				setState(88);
				match(NEWLINE);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(90);
				ext_command();
				setState(91);
				match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode DOT() { return getToken(dAngrParser.DOT, 0); }
		public List<TerminalNode> WS() { return getTokens(dAngrParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(dAngrParser.WS, i);
		}
		public List<Expression_partContext> expression_part() {
			return getRuleContexts(Expression_partContext.class);
		}
		public Expression_partContext expression_part(int i) {
			return getRuleContext(Expression_partContext.class,i);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(dAngrParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(dAngrParser.ASSIGN, i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expression);
		try {
			int _alt;
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(95);
					identifier();
					setState(96);
					match(DOT);
					}
					break;
				}
				setState(100);
				identifier();
				setState(110);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(101);
						match(WS);
						setState(105);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
						case 1:
							{
							setState(102);
							identifier();
							setState(103);
							match(ASSIGN);
							}
							break;
						}
						setState(107);
						expression_part(0);
						}
						} 
					}
					setState(112);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				expression_part(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expression_partContext extends ParserRuleContext {
		public Expression_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression_part; }
	 
		public Expression_partContext() { }
		public void copyFrom(Expression_partContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionRangeContext extends Expression_partContext {
		public TerminalNode RANGE() { return getToken(dAngrParser.RANGE, 0); }
		public TerminalNode LPAREN() { return getToken(dAngrParser.LPAREN, 0); }
		public List<Expression_partContext> expression_part() {
			return getRuleContexts(Expression_partContext.class);
		}
		public Expression_partContext expression_part(int i) {
			return getRuleContext(Expression_partContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(dAngrParser.RPAREN, 0); }
		public List<TerminalNode> WS() { return getTokens(dAngrParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(dAngrParser.WS, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(dAngrParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(dAngrParser.COMMA, i);
		}
		public ExpressionRangeContext(Expression_partContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).enterExpressionRange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).exitExpressionRange(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionInContext extends Expression_partContext {
		public List<Expression_partContext> expression_part() {
			return getRuleContexts(Expression_partContext.class);
		}
		public Expression_partContext expression_part(int i) {
			return getRuleContext(Expression_partContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(dAngrParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(dAngrParser.WS, i);
		}
		public TerminalNode IN() { return getToken(dAngrParser.IN, 0); }
		public ExpressionInContext(Expression_partContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).enterExpressionIn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).exitExpressionIn(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionObjectContext extends Expression_partContext {
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public ExpressionObjectContext(Expression_partContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).enterExpressionObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).exitExpressionObject(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionBoolContext extends Expression_partContext {
		public TerminalNode BOOL() { return getToken(dAngrParser.BOOL, 0); }
		public ExpressionBoolContext(Expression_partContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).enterExpressionBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).exitExpressionBool(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionReferenceContext extends Expression_partContext {
		public ReferenceContext reference() {
			return getRuleContext(ReferenceContext.class,0);
		}
		public ExpressionReferenceContext(Expression_partContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).enterExpressionReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).exitExpressionReference(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionIfContext extends Expression_partContext {
		public TerminalNode CIF() { return getToken(dAngrParser.CIF, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode CTHEN() { return getToken(dAngrParser.CTHEN, 0); }
		public List<Expression_partContext> expression_part() {
			return getRuleContexts(Expression_partContext.class);
		}
		public Expression_partContext expression_part(int i) {
			return getRuleContext(Expression_partContext.class,i);
		}
		public TerminalNode CELSE() { return getToken(dAngrParser.CELSE, 0); }
		public List<TerminalNode> WS() { return getTokens(dAngrParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(dAngrParser.WS, i);
		}
		public ExpressionIfContext(Expression_partContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).enterExpressionIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).exitExpressionIf(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionAltContext extends Expression_partContext {
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public ExpressionAltContext(Expression_partContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).enterExpressionAlt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).exitExpressionAlt(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionParenthesisContext extends Expression_partContext {
		public TerminalNode LPAREN() { return getToken(dAngrParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(dAngrParser.RPAREN, 0); }
		public List<TerminalNode> WS() { return getTokens(dAngrParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(dAngrParser.WS, i);
		}
		public ExpressionParenthesisContext(Expression_partContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).enterExpressionParenthesis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).exitExpressionParenthesis(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionOperationContext extends Expression_partContext {
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public Expression_partContext expression_part() {
			return getRuleContext(Expression_partContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(dAngrParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(dAngrParser.WS, i);
		}
		public ExpressionOperationContext(Expression_partContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).enterExpressionOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dAngrListener ) ((dAngrListener)listener).exitExpressionOperation(this);
		}
	}

	public final Expression_partContext expression_part() throws RecognitionException {
		return expression_part(0);
	}

	private Expression_partContext expression_part(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Expression_partContext _localctx = new Expression_partContext(_ctx, _parentState);
		Expression_partContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_expression_part, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,26,_ctx) ) {
			case 1:
				{
				_localctx = new ExpressionIfContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(117);
				match(CIF);
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(118);
					match(WS);
					}
				}

				setState(121);
				condition();
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(122);
					match(WS);
					}
				}

				setState(125);
				match(CTHEN);
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(126);
					match(WS);
					}
				}

				setState(129);
				expression_part(0);
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(130);
					match(WS);
					}
				}

				setState(133);
				match(CELSE);
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(134);
					match(WS);
					}
				}

				setState(137);
				expression_part(9);
				}
				break;
			case 2:
				{
				_localctx = new ExpressionParenthesisContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(139);
				match(LPAREN);
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(140);
					match(WS);
					}
				}

				setState(143);
				expression();
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(144);
					match(WS);
					}
				}

				setState(147);
				match(RPAREN);
				}
				break;
			case 3:
				{
				_localctx = new ExpressionRangeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(149);
				match(RANGE);
				setState(150);
				match(LPAREN);
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(151);
					match(WS);
					}
				}

				setState(154);
				expression_part(0);
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(155);
					match(WS);
					}
				}

				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(158);
					match(COMMA);
					setState(160);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==WS) {
						{
						setState(159);
						match(WS);
						}
					}

					setState(162);
					expression_part(0);
					setState(164);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==WS) {
						{
						setState(163);
						match(WS);
						}
					}

					setState(174);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==COMMA) {
						{
						setState(166);
						match(COMMA);
						setState(168);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==WS) {
							{
							setState(167);
							match(WS);
							}
						}

						setState(170);
						expression_part(0);
						setState(172);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==WS) {
							{
							setState(171);
							match(WS);
							}
						}

						}
					}

					}
				}
